**pnp-0.6.7 ??/??/2010**

**pnp-0.6.6 08/07/2010**

  * Bugfix: Fixed max amount of graphs per template 
  * Bugfix: Autodetect PNP base URL
  * Bugfix: Too short npcdmod perfdata_template to take perfdata + overhead, increased +1024byte
  * Bugfix: Ignore files in var/perfdata and check for empty directories
  * Bugfix: Reducing memory usage while parsing page config (Laurent Freval)

**pnp-0.6.5 07/09/2010**

  * Feature: Special Templates are back [[tpl_special]]
  * Feature: New rrdtool helper functions makes template design easier [[tpl_helper]]
  * Feature: config.php -> 'recursive_template_search' is enabled by default
  * Feature: config.php -> 'template_dirs' is now an array of directorys to search for PNP templates

**pnp-0.6.4 06/03/2010**

  * Update: jQuery Update to 1.4.2
  * Update: jQuery-ui Update to 1.8
  * Feature: New configure Option --with-base-url
  * Template: New template check_ntp_time.php (Mathias Kettner)
  * Feature: New i18n files for fr_FR (Yannig Parre)
  * Feature: New jQuery Theme 'multisite'

**pnp-0.6.3 03/16/2010**

  * Feature: New helper script libexec/rrd_convert.pl -> [[rrd_convert]]
  * Bugfix: Ignore old XML files while building the service list
  * Template: New template check_hpasm.php
  * Bugfix: Installer now checks for json_decode()
  * Workaround: Allow "trailing unfilled semicolons". Workaround for nsclient++
  * Template: Updates for check_openmanage.php, check_hp_bladecenter.php and check_dell_baldecenter.php ( Trond Hasle Amundsen )"

**pnp-0.6.2 12/23/2009**

  * Feature: XML_WRITE_DELAY option added to process_perfdata.cfg as suggested by Mathias Kettner
  * Feature: New template integer.php 
  * Update: FPDI update to 1.3.1
  * Feature: PNP will now work with [[http://http://www.lighttpd.net|lighttpd]] and php-cgi
  * Template: check_mk-ps.perf.php added ( by Mathias Kettner )
  * Feature: PNP will now work without mod_rewrite -> [[webfe]] 
  * Bugfix: Wrong pdf link used on site 'pages' and 'basket'