@@ -48,6 +48,7 @@ Steve Finkelstein - Bugreport
 Mathias Kettner - xml write delay
 Yannig Parre - i18n fr_FR
 Laurent Freval - Patches and feedback
+Beau Gunderson - Patches and feedback
 
 ###########################################
 #           NPCD Thanks                   #
